--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,33 @@
       max-width: 320px;
     }
   }
+
+  blink {
+    -webkit-animation: 1.2s linear infinite condemned_blink_effect; /* for Safari 4.0 - 8.0 */
+    animation: 1.2s linear infinite condemned_blink_effect;
+  }
+  
+  /* for Safari 4.0 - 8.0 */
+  @-webkit-keyframes condemned_blink_effect {
+    0% {
+      visibility: hidden;
+    }
+    50% {
+      visibility: hidden;
+    }
+    100% {
+      visibility: visible;
+    }
+  }
+  
+  @keyframes condemned_blink_effect {
+    0% {
+      visibility: hidden;
+    }
+    50% {
+      visibility: hidden;
+    }
+    100% {
+      visibility: visible;
+    }
+  }
